<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    >
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/client"
      android:textColor="@color/red"
      android:textSize="@dimen/text_38"
      />
  <Button
      android:id="@+id/bt_connect"
      android:layout_width="420dp"
      android:layout_height="80dp"
      android:gravity="center"
      android:text="@string/connect"
      android:textAllCaps="false"
      android:textColor="@color/green"
      android:textSize="@dimen/text_38"
      />
  <Button
      android:id="@+id/bt_sendMessage"
      android:layout_width="420dp"
      android:layout_height="80dp"
      android:layout_marginTop="20dp"
      android:gravity="center"
      android:text="@string/sendipcmessage"
      android:textAllCaps="false"
      android:textColor="@color/green"
      android:textSize="@dimen/text_38"
      />
  <Button
      android:id="@+id/bt_sendMessageWithCallback"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_marginTop="20dp"
      android:layout_weight="0.03"
      android:gravity="center"
      android:text="@string/sendipcmessagewithcallback"
      android:textAllCaps="false"
      android:textSize="@dimen/text_38"
      android:textColor="@color/green"
      />
  <Button
      android:id="@+id/bt_sendMessageBlocked"
      android:layout_width="474dp"
      android:layout_height="80dp"
      android:layout_marginTop="20dp"
      android:layout_weight="0.09"
      android:gravity="center"
      android:text="@string/sendipcmessageblocked"
      android:textAllCaps="false"
      android:textColor="@color/green"
      android:textSize="@dimen/text_38"
      />

</LinearLayout>